Fixed all errors